kubernetes/destination-rule.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: nibas-events
  namespace: nibas
spec:
  host: nibas-events
  subsets:
  - name: nibas-events
    trafficPolicy:
      loadBalancer:
        simple: ROUND_ROBIN
      tls:
        mode: ISTIO_MUTUAL
